second stage module 2 progress

--- a/public/index.html
+++ b/public/index.html
@@ -7,8 +7,11 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Little Lemons webpage to allow reservations and online derlivery services. To ensure sales and allow reservation booking system"
     />
+    <meta name="og:title" content="Little Lemon"/>
+    <meta name="og:description" content="Little Lemon is a resteraunt which is allowing their customers to view their page online for delivery and table booking system"/>
+    <meta name="og:image" content="/Users/sumersinghkang/Desktop/Final Project/littleleomon/src/LittleLemon.png"/>
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
