--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,8 @@
     <meta name="og:description" content="Little Lemon is a resteraunt which is allowing their customers to view their page online for delivery and table booking system"/>
     <meta name="og:image" content="/Users/sumersinghkang/Desktop/Final Project/littleleomon/src/LittleLemon.png"/>
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <link rel="stylesheet" href="/Users/sumersinghkang/Desktop/Final Project/littleleomon/src/App.css" />
+
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
